# IDC_Robocon2025

./: README.md
Mission Robot/MG995舵机-夹爪2/: ~$夹手.SLDPRT  圆柱齿轮20×1.5-从动2.SLDPRT  基座2.SLDPRT  装配体1.SLDASM
Mission Robot/Mission Robot/: STD Servomotor.STL  servomotorcase.SLDPRT  servomotorcase.STL  万向轮.STL  万向轮支架.SLDPRT  万向轮支架.STL  从动杆2.SLDPRT  半齿轮_1.STL  半齿轮_2.SLDPRT  半齿轮_2.STL  夹爪挂架.SLDPRT  底板.STL  支撑杆2.STL  支撑杆2_短.SLDPRT  支撑杆2_短.STL  支撑板.STL  支撑板3.SLDPRT  支撑板3.STL  电机.STL  电机支架.SLDPRT  电机支架.STL  角铁.STL  角铁2.SLDPRT  角铁2.STL  轮子.STL  铰链.SLDASM  铰链_half.SLDPRT  铰链_half.STL  顶板 for 夹爪.SLDPRT  顶板.STL  驱动杆2.SLDPRT
SolidWorks Models/: 亚克力板.SLDASM
SolidWorks Models/Building Robot/: Building Robot.SLDASM  万向轮.SLDPRT  万向轮支架.SLDPRT  丝杆.SLDPRT  丝杆支架.SLDPRT  丝杆联轴器.SLDPRT  丝杆螺母.SLDPRT  底板_building.DXF  底板_building.SLDPRT  推板.DXF  推板.SLDPRT  斜坡连接件.SLDPRT  斜坡连接板.SLDPRT  斜坡限位_右.SLDPRT  斜坡限位_右.STL  斜坡限位_左.SLDPRT  斜面.SLDASM  斜面_half.SLDPRT  斜面连接杆.SLDPRT  编码电机.SLDPRT  编码电机支架.SLDPRT  编码电机支架.STL  轮子.SLDPRT
SolidWorks Models/Contest/: container1.SLDPRT  sports_site.SLDPRT
SolidWorks Models/Contest_20250808/: assem.SLDASM  assem.SLDDRW  (+7 more)
field/: CMakeLists.txt  package.xml
final1/: CMakeLists.txt  package.xml
final11/: CMakeLists.txt  robot_launch.py
final11/config/: joint_names_final11.yaml
final11/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
final11/meshes/: board1.STL  board2.STL  board3.STL  board4.STL  board5.STL  castersupport1.STL  chassis.STL  gear1.STL  gear3.STL  hand1.STL  hand2.STL  stick2.STL  wheel2.STL
final11/urdf/: final11.csv
(+107 files in other folders)
